--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="colorDefault">#D5D6D6</color>
+    <color name="colorCorrect">#00C853</color>
+    <color name="colorWrong">#C62828</color>
 </resources>
